feat(assets): Demonstrate `densities` attribute for high-res screens
Showcases the use of the `densities` attribute on the `<Image>` component to provide multiple image resolutions for different screen pixel densities (e.g., Retina displays).

This commit adds `densities={[1.5, 2]}` to an image, instructing Astro to automatically generate 1.5x and 2x versions. This ensures that users on high-resolution displays receive a sharper image, while users on standard displays download a smaller, appropriate file.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import ReactWrapper from "../components/ReactWrapper";
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
     <ReactWrapper>
-      <Image width={40} format="avif" quality="mid" src={Katie} alt="Katie Haus" />
+      <Image width={150} format="avif" quality="mid" src={Katie} alt="Katie Haus" densities={[1.5, 2]} />
     </ReactWrapper>
   </body>
 </html>
