feat(assets): Demonstrate `widths` attribute for responsive images
Showcases the use of the `widths` attribute on the `<Image>` component to create multiple sizes of an image for responsive layouts.

This commit adds the `widths` and `sizes` attributes to an image. This combination allows the browser to select the most appropriate image file based on the viewport size, significantly improving performance and reducing data usage on smaller devices. It is the more common and flexible approach for modern responsive design.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,14 @@ import ReactWrapper from "../components/ReactWrapper";
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
     <ReactWrapper>
-      <Image width={150} format="avif" quality="mid" src={Katie} alt="Katie Haus" densities={[1.5, 2]} />
+      <Image 
+        src={Katie} 
+        alt="Katie Haus" 
+        widths={[240, 540, 720, Katie.width]}
+        sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${Katie.width}px`}
+        format="avif"
+        quality="mid"
+      />
     </ReactWrapper>
   </body>
 </html>
