--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "astro:assets";
+import { Picture } from "astro:assets";
 import Katie from "../assets/image.jpg";
 import ReactWrapper from "../components/ReactWrapper";
 ---
@@ -18,13 +18,14 @@ import ReactWrapper from "../components/ReactWrapper";
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
     <ReactWrapper>
-      <Image 
-        src={Katie} 
-        alt="Katie Haus" 
-        widths={[240, 540, 720, Katie.width]}
-        sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${Katie.width}px`}
-        format="avif"
-        quality="mid"
+      <Picture
+        src={Katie}
+        alt="Katie Haus"
+        formats={["avif", "webp"]}
+        fallbackFormat="jpg"
+        widths={[240, 540, 720, 1080]}
+        sizes="(max-width: 720px) 100vw, 720px"
+        class="w-full h-auto"
       />
     </ReactWrapper>
   </body>
