--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
-import { Picture } from "astro:assets";
+import { getImage, Picture } from "astro:assets";
+import backgroundImage from "../assets/background.png";
 import Katie from "../assets/image.jpg";
 import ReactWrapper from "../components/ReactWrapper";
+
+const mobileImage = await getImage({ src: backgroundImage, width: 600, format: "webp" });
+const desktopImage = await getImage({ src: backgroundImage, width: 1920, format: "webp" });
 ---
 
 <html lang="en">
@@ -11,9 +15,23 @@ import ReactWrapper from "../components/ReactWrapper";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
+    <style define:vars={{ mobileImage: `url(${mobileImage.src})`, desktopImage: `url(${desktopImage.src})` }}>
+      .hero-section {
+        background-image: var(--mobileImage);
+        background-size: cover;
+      }
+
+      @media (min-width: 768px) {
+        .hero-section {
+          background-image: var(--desktopImage);
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>Astro</h1>
+    <div class="hero-section">
+      <h1>Astro</h1>
+    </div>
     <p>Public Image</p>
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
